--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,5 @@ services:
     name: backend-devmobile
     env: docker
     plan: free
-    buildCommand: "./.render-build.sh"
-    startCommand: "php -S 0.0.0.0:10000 -t public"
-    dockerfilePath: null
+    buildCommand: ""
+    startCommand: php -S 0.0.0.0:10000 -t public
