--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     name: backend-devmobile
-    env: docker
+    env: static
     plan: free
     buildCommand: ""
     startCommand: php -S 0.0.0.0:10000 -t public
